Removendo referencias de imagens

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -88,7 +88,6 @@
                                         <table class="table table-hover">
                                             <tbody>
                                                 <tr class="unread">
-                                                    <td><img class="rounded-circle" style="width:40px;" src="/static/assets/images/user/avatar-1.jpg" alt="activity-user"></td>
                                                     <td>
                                                         <h6 class="mb-1">Isabella Christensen</h6>
                                                         <p class="m-0">Lorem Ipsum is simply…</p>
@@ -99,7 +98,7 @@
                                                     <td><a href="#!" class="label theme-bg2 text-white f-12">Reject</a><a href="#!" class="label theme-bg text-white f-12">Approve</a></td>
                                                 </tr>
                                                 <tr class="unread">
-                                                    <td><img class="rounded-circle" style="width:40px;" src="/static/assets/images/user/avatar-2.jpg" alt="activity-user"></td>
+                                                
                                                     <td>
                                                         <h6 class="mb-1">Mathilde Andersen</h6>
                                                         <p class="m-0">Lorem Ipsum is simply text of…</p>
@@ -110,7 +109,7 @@
                                                     <td><a href="#!" class="label theme-bg2 text-white f-12">Reject</a><a href="#!" class="label theme-bg text-white f-12">Approve</a></td>
                                                 </tr>
                                                 <tr class="unread">
-                                                    <td><img class="rounded-circle" style="width:40px;" src="/static/assets/images/user/avatar-3.jpg" alt="activity-user"></td>
+                                                  
                                                     <td>
                                                         <h6 class="mb-1">Karla Sorensen</h6>
                                                         <p class="m-0">Lorem Ipsum is simply…</p>
@@ -121,7 +120,7 @@
                                                     <td><a href="#!" class="label theme-bg2 text-white f-12">Reject</a><a href="#!" class="label theme-bg text-white f-12">Approve</a></td>
                                                 </tr>
                                                 <tr class="unread">
-                                                    <td><img class="rounded-circle" style="width:40px;" src="/static/assets/images/user/avatar-1.jpg" alt="activity-user"></td>
+                                                    
                                                     <td>
                                                         <h6 class="mb-1">Ida Jorgensen</h6>
                                                         <p class="m-0">Lorem Ipsum is simply text of…</p>
@@ -132,7 +131,6 @@
                                                     <td><a href="#!" class="label theme-bg2 text-white f-12">Reject</a><a href="#!" class="label theme-bg text-white f-12">Approve</a></td>
                                                 </tr>
                                                 <tr class="unread">
-                                                    <td><img class="rounded-circle" style="width:40px;" src="/static/assets/images/user/avatar-2.jpg" alt="activity-user"></td>
                                                     <td>
                                                         <h6 class="mb-1">Albert Andersen</h6>
                                                         <p class="m-0">Lorem Ipsum is simply dummy…</p>
@@ -371,7 +369,6 @@
                                         <tbody>
                                             <tr>
                                                 <td>
-                                                    <h6 class="m-0"><img class="rounded-circle m-r-10" style="width:40px;" src="/static/assets/images/user/avatar-1.jpg" alt="activity-user">Ida Jorgensen</h6>
                                                 </td>
                                                 <td>
                                                     <h6 class="m-0">The quick brown fox</h6>
@@ -387,7 +384,7 @@
 
                                             <tr>
                                                 <td>
-                                                    <h6 class="m-0"><img class="rounded-circle  m-r-10" style="width:40px;" src="/static/assets/images/user/avatar-2.jpg" alt="activity-user">Albert Andersen</h6>
+                                                  
                                                 </td>
                                                 <td>
                                                     <h6 class="m-0">Jumps over the lazy</h6>
@@ -403,7 +400,6 @@
 
                                             <tr>
                                                 <td>
-                                                    <h6 class="m-0"><img class="rounded-circle  m-r-10" style="width:40px;" src="/static/assets/images/user/avatar-3.jpg" alt="activity-user">Silje Larsen</h6>
                                                 </td>
                                                 <td>
                                                     <h6 class="m-0">Dog the quick brown</h6>
@@ -418,7 +414,6 @@
                                             </tr>
                                             <tr>
                                                 <td>
-                                                    <h6 class="m-0"><img class="rounded-circle  m-r-10" style="width:40px;" src="/static/assets/images/user/avatar-1.jpg" alt="activity-user">Ida Jorgensen</h6>
                                                 </td>
                                                 <td>
                                                     <h6 class="m-0">The quick brown fox</h6>
@@ -449,7 +444,6 @@
                                         <tbody>
                                             <tr>
                                                 <td>
-                                                    <h6 class="m-0"><img class="rounded-circle  m-r-10" style="width:40px;" src="/static/assets/images/user/avatar-2.jpg" alt="activity-user">Albert Andersen</h6>
                                                 </td>
                                                 <td>
                                                     <h6 class="m-0">Jumps over the lazy</h6>
@@ -464,7 +458,7 @@
                                             </tr>
                                             <tr>
                                                 <td>
-                                                    <h6 class="m-0"><img class="rounded-circle m-r-10" style="width:40px;" src="/static/assets/images/user/avatar-1.jpg" alt="activity-user">Ida Jorgensen</h6>
+                                                    <h6 class="m-0"><img class="rounded-circle m-r-10" style="width:40px;" src="/static/assets/images/user/avatar-1" alt="activity-user">Ida Jorgensen</h6>
                                                 </td>
                                                 <td>
                                                     <h6 class="m-0">The quick brown fox</h6>
@@ -479,7 +473,6 @@
                                             </tr>
                                             <tr>
                                                 <td>
-                                                    <h6 class="m-0"><img class="rounded-circle  m-r-10" style="width:40px;" src="/static/assets/images/user/avatar-1.jpg" alt="activity-user">Ida Jorgensen</h6>
                                                 </td>
                                                 <td>
                                                     <h6 class="m-0">The quick brown fox</h6>
@@ -494,7 +487,6 @@
                                             </tr>
                                             <tr>
                                                 <td>
-                                                    <h6 class="m-0"><img class="rounded-circle  m-r-10" style="width:40px;" src="/static/assets/images/user/avatar-3.jpg" alt="activity-user">Silje Larsen</h6>
                                                 </td>
                                                 <td>
                                                     <h6 class="m-0">Dog the quick brown</h6>
@@ -525,7 +517,6 @@
                                         <tbody>
                                             <tr>
                                                 <td>
-                                                    <h6 class="m-0"><img class="rounded-circle  m-r-10" style="width:40px;" src="/static/assets/images/user/avatar-3.jpg" alt="activity-user">Silje Larsen</h6>
                                                 </td>
                                                 <td>
                                                     <h6 class="m-0">Dog the quick brown</h6>
@@ -540,7 +531,6 @@
                                             </tr>
                                             <tr>
                                                 <td>
-                                                    <h6 class="m-0"><img class="rounded-circle m-r-10" style="width:40px;" src="/static/assets/images/user/avatar-1.jpg" alt="activity-user">Ida Jorgensen</h6>
                                                 </td>
                                                 <td>
                                                     <h6 class="m-0">The quick brown fox</h6>
@@ -555,7 +545,6 @@
                                             </tr>
                                             <tr>
                                                 <td>
-                                                    <h6 class="m-0"><img class="rounded-circle  m-r-10" style="width:40px;" src="/static/assets/images/user/avatar-2.jpg" alt="activity-user">Albert Andersen</h6>
                                                 </td>
                                                 <td>
                                                     <h6 class="m-0">Jumps over the lazy</h6>
@@ -570,7 +559,6 @@
                                             </tr>
                                             <tr>
                                                 <td>
-                                                    <h6 class="m-0"><img class="rounded-circle  m-r-10" style="width:40px;" src="/static/assets/images/user/avatar-1.jpg" alt="activity-user">Ida Jorgensen</h6>
                                                 </td>
                                                 <td>
                                                     <h6 class="m-0">The quick brown fox</h6>
